# newmx

./: LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: README.txt
android/app/src/main/java/com/cccstudios/newmx/: EncodeShareActivity.kt  MainActivity.kt  NewMxApp.kt  ProcessTextActivity.kt  Support.kt
android/app/src/main/java/com/cccstudios/newmx/codec/: Codec.kt  CodecConstants.kt  DecodeTable.kt  Encoder.kt  Normalizer.kt  PhraseGlyphMap.kt
android/app/src/main/res/drawable/: encoded_output_bg.xml  ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
android/app/src/test/java/com/cccstudios/newmx/codec/: CodecKotlinTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
android/play-store-assets/: LISTING.md  PRIVACY.md  SUBMISSION_CHECKLIST.md
android/scripts/: parity_check.py
benchmarks/: ablation_normalize_vs_substitute.py  measure_per_prompt_tokens_v3.py  simulate_breakeven.py
chrome-extension/: README.md
newmx/: __init__.py  _constants.py  _decoder.py  _encoder.py  _normalize.py  codec.py  path1_pipeline_b3_v005_rev4_FAST_cli5.py
newmx/maps/: path1_en_b3_v005_rev4.json
tests/: test_basic.py
